--- a/portfolio.html
+++ b/portfolio.html
@@ -41,13 +41,29 @@
                         </nav>
                     </div>
                     <ul class="mail-tel">
-                        <li>
-                            <a href="mailto:info@devstudio.com"
-                                >info@devstudio.com</a
+                        <li class="mail-tel-li">
+                            <a
+                                class="mail-tel-a"
+                                href="mailto:info@devstudio.com"
+                            >
+                                <svg width="16" height="12">
+                                    <use
+                                        href="images/icons.svg#icon-mail"
+                                    ></use>
+                                </svg>
+
+                                info@devstudio.com</a
                             >
                         </li>
-                        <li>
-                            <a href="tel:+48111111111">+48 111 111 111</a>
+                        <li class="mail-tel-li">
+                            <a class="mail-tel-a" href="tel:+48111111111">
+                                <svg width="10" height="16">
+                                    <use
+                                        href="images/icons.svg#icon-smartphone"
+                                    ></use>
+                                </svg>
+                                +48 111 111 111</a
+                            >
                         </li>
                     </ul>
                 </div>
@@ -214,25 +230,70 @@
         </main>
         <!-- ================================== STOPKA ================================== -->
         <footer class="footer-main">
-            <div class="container">
-                <a href="index.html">
-                    <p class="logo logo-white">
-                        <span class="logo-blue">Web</span>Studio
-                    </p></a
-                >
-                <address>
-                    <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-                    <ul>
-                        <li class="address-padding">
-                            <a href="mailto:info@example.com"
-                                >info@example.com</a
+            <div class="container footer-main-inside">
+                <div>
+                    <a href="index.html">
+                        <p class="logo logo-white">
+                            <span class="logo-blue">Web</span>Studio
+                        </p></a
+                    >
+                    <address>
+                        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+                        <ul>
+                            <li class="address-padding">
+                                <a href="mailto:info@example.com"
+                                    >info@example.com</a
+                                >
+                            </li>
+                            <li class="address-padding">
+                                <a href="tel:+48111111111">+48 111 111 111</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="join-us">
+                    <p>dołącz do nas</p>
+                    <ul class="join-us-links">
+                        <li>
+                            <svg
+                                viewBox="0 0 15 30"
+                                class="round-join-us-links"
                             >
+                                <use
+                                    href="images/icons.svg#icon-instagram"
+                                ></use>
+                            </svg>
                         </li>
-                        <li class="address-padding">
-                            <a href="tel:+48111111111">+48 111 111 111</a>
+                        <li>
+                            <svg
+                                viewBox="0 0 15 30"
+                                class="round-join-us-links"
+                            >
+                                <use href="images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </li>
+                        <li>
+                            <svg
+                                viewBox="0 0 15 30"
+                                class="round-join-us-links"
+                            >
+                                <use
+                                    href="images/icons.svg#icon-facebook"
+                                ></use>
+                            </svg>
+                        </li>
+                        <li>
+                            <svg
+                                viewBox="0 0 15 30"
+                                class="round-join-us-links"
+                            >
+                                <use
+                                    href="images/icons.svg#icon-linkedin"
+                                ></use>
+                            </svg>
                         </li>
                     </ul>
-                </address>
+                </div>
             </div>
         </footer>
     </body>
