--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
                   <p>Product Designer</p>
                   <ul class="social-links">
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
                       <svg viewBox="0 0 15 30" class="round-social-links">
@@ -197,14 +199,18 @@
                       </svg>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -223,9 +229,11 @@
                   <p>Frontend Developer</p>
                   <ul class="social-links">
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
                       <svg viewBox="0 0 15 30" class="round-social-links">
@@ -233,14 +241,18 @@
                       </svg>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -259,9 +271,11 @@
                   <p>Marketing</p>
                   <ul class="social-links">
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
                       <svg viewBox="0 0 15 30" class="round-social-links">
@@ -269,14 +283,18 @@
                       </svg>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -295,9 +313,11 @@
                   <p>UI Designer</p>
                   <ul class="social-links">
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
                       <svg viewBox="0 0 15 30" class="round-social-links">
@@ -305,14 +325,18 @@
                       </svg>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li>
-                      <svg viewBox="0 0 15 30" class="round-social-links">
-                        <use href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a href="#">
+                        <svg viewBox="0 0 15 30" class="round-social-links">
+                          <use href="images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -326,64 +350,76 @@
           <h3>Nasi klienci</h3>
           <ul class="our-customers">
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 50 110"
-              >
-                <use href="images/icons.svg#icon-company-1"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 50 110"
+                >
+                  <use href="images/icons.svg#icon-company-1"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 50 110"
-              >
-                <use href="images/icons.svg#icon-company-2"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 50 110"
+                >
+                  <use href="images/icons.svg#icon-company-2"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 50 110"
-              >
-                <use href="images/icons.svg#icon-company-3"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 50 110"
+                >
+                  <use href="images/icons.svg#icon-company-3"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 45 50"
-              >
-                <use href="images/icons.svg#icon-company-4"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 45 50"
+                >
+                  <use href="images/icons.svg#icon-company-4"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 50 70"
-              >
-                <use href="images/icons.svg#icon-company-5"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 50 70"
+                >
+                  <use href="images/icons.svg#icon-company-5"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg
-                class="our-customers-icon"
-                width="170"
-                height="92"
-                viewBox=" 0 0 50 50"
-              >
-                <use href="images/icons.svg#icon-company-6"></use>
-              </svg>
+              <a href="#">
+                <svg
+                  class="our-customers-icon"
+                  width="170"
+                  height="92"
+                  viewBox=" 0 0 50 50"
+                >
+                  <use href="images/icons.svg#icon-company-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -414,24 +450,32 @@
           <p>dołącz do nas</p>
           <ul class="join-us-links">
             <li>
-              <svg viewBox="0 0 15 30" class="round-join-us-links">
-                <use href="images/icons.svg#icon-instagram"></use>
-              </svg>
+              <a href="#">
+                <svg viewBox="0 0 15 30" class="round-join-us-links">
+                  <use href="images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg viewBox="0 0 15 30" class="round-join-us-links">
-                <use href="images/icons.svg#icon-twitter"></use>
-              </svg>
+              <a href="#">
+                <svg viewBox="0 0 15 30" class="round-join-us-links">
+                  <use href="images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg viewBox="0 0 15 30" class="round-join-us-links">
-                <use href="images/icons.svg#icon-facebook"></use>
-              </svg>
+              <a href="#">
+                <svg viewBox="0 0 15 30" class="round-join-us-links">
+                  <use href="images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg viewBox="0 0 15 30" class="round-join-us-links">
-                <use href="images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a href="#">
+                <svg viewBox="0 0 15 30" class="round-join-us-links">
+                  <use href="images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
